[package]
name = "h"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"          # Для диалогов выбора файлов
ureq = "2.6.0"        # Для синхронных HTTP-запросов
open = "3.2.0"         # Для открытия файлов в браузере

